--- a/src/app/apps/apps.component.scss
+++ b/src/app/apps/apps.component.scss
@@ -39,11 +39,11 @@
   }
 
   .current-app {
-    min-width: 235px;
-    max-width: 235px;
-    min-height: 48px;
-    max-height: 48px;
-    border-radius: 4px;
+    min-width: 172px;
+    max-width: 172px;
+    min-height: 32px;
+    max-height: 32px;
+    border-radius: 6px;
 
     .current-app-thumbnail {
       border-radius: 6px;
@@ -51,10 +51,10 @@
       transition: 0.25s;
 
       img {
-        min-width: 36px;
-        max-width: 36px;
-        min-height: 36px;
-        max-height: 36px;
+        min-width: 20px;
+        max-width: 20px;
+        min-height: 20px;
+        max-height: 20px;
       }
     }
   }
@@ -136,14 +136,20 @@
   overflow: hidden;
 }
 
-.menu,
 .profile-icon,
-.admin-settings,
+.admin-settings {
+  min-width: 32px;
+  max-width: 32px;
+  min-height: 32px;
+  max-height: 32px;
+}
+
+.menu,
 .current-app-thumbnail {
-  min-width: 36px;
-  max-width: 36px;
-  min-height: 36px;
-  max-height: 36px;
+  min-width: 20px;
+  max-width: 20px;
+  min-height: 20px;
+  max-height: 20px;
 }
 
 .menu {
@@ -151,17 +157,23 @@
 }
 
 .profile {
-  border-radius: 5px;
+  border-radius: 8px;
   box-shadow: 0px 6px 16px rgba($color: #c7c7c7, $alpha: 0.5);
   top: 50px;
-  right: 6px;
-  z-index: 1072;
+  right: 10px;
+  z-index: 10;
+
+  .profile-options>div {
+    &:hover {
+      .dsi {
+        color: $primary;
+      }
+    }
+  }
 
   .profile-container {
-    min-width: 400px;
-    max-width: 400px;
-    min-height: 120px;
-    max-height: 120px;
+    min-width: 332px;
+    max-width: 332px;
 
     .user-icon {
       min-width: 36px;
@@ -173,10 +185,10 @@
     }
 
     .profile-thumbnail {
-      min-width: 60px;
-      max-width: 60px;
-      min-height: 60px;
-      max-height: 60px;
+      min-width: 48px;
+      max-width: 48px;
+      min-height: 48px;
+      max-height: 48px;
     }
 
     .profile-data-more-item {
@@ -213,30 +225,6 @@
   }
 }
 
-.ic-name {
-  min-width: 8px;
-  max-width: 8px;
-  min-height: 15px;
-  max-height: 15px;
-}
-
-.last-login {
-  position: absolute;
-  top: 100px;
-  left: 10px;
-}
-
-.icon-group-acc {
-  transition: 0.4s;
-}
-
-.chevron {
-  transform: rotate(180deg);
-}
-
-.border-c {
-  border-color: #ECECEC !important;
-}
 
 .items {
   margin-left: 15px;
