--- a/src/app/home/faas/faas-listing/faas-listing.component.html
+++ b/src/app/home/faas/faas-listing/faas-listing.component.html
@@ -7,10 +7,10 @@
     <div class="d-flex align-items-center">
       <odp-search-box (enteredText)="search($event)" (reset)="resetSearch();"></odp-search-box>
       <button id="createFunction" type="button"
-        class="add-new btn btn-primary btn-min-width ml-3 d-flex align-items-center" (click)="newFaas()"
+        class="add-new btn btn-primary ml-3 d-flex align-items-center" (click)="newFaas()"
         [disabled]="!hasWritePermission('FAAS')">
         <span class="dsi dsi-plus mr-2"></span>
-        <span class="text">New Function</span>
+        <span class="text">New</span>
       </button>
     </div>
   </div>
