change password modal

--- a/src/app/utils/change-password/change-password.component.html
+++ b/src/app/utils/change-password/change-password.component.html
@@ -1,10 +1,10 @@
 <ng-template #changePasswordModal>
   <div class="modal-body p-4" [formGroup]="changePasswordForm">
-    <div class="d-flex align-items-center align-self-start mb-3">
+    <div class="d-flex align-items-center align-self-start mb-4">
       <span class="font-20 fw-600">Change Password</span>
     </div>
     <div class="input-wrapper position-relative">
-      <input [type]="showPassword['old'] ? 'text' : 'password'" placeholder="Old password"
+      <input [type]="showPassword['old'] ? 'text' : 'password'" placeholder="Old Password"
         class="form-control mb-3 input-eye" [ngClass]="{'is-invalid':oldPasswordRequired || oldPasswordLength}"
         formControlName="oldpassword" odpAutoFocus>
       <span *ngIf="oldPasswordRequired" class="dsi dsi-danger-circle position-absolute text-danger error-icon"
@@ -17,7 +17,7 @@
         (click)="showPassword['old']= !showPassword['old']"></span>
     </div>
     <div class="input-wrapper position-relative mb-3">
-      <input [type]="showPassword['new'] ? 'text' : 'password'" placeholder="New password"
+      <input [type]="showPassword['new'] ? 'text' : 'password'" placeholder="New Password"
         class="form-control input-eye" [ngClass]="{'is-invalid':newPasswordRequired || newPasswordLength}"
         formControlName="newpassword">
       <span *ngIf="newPasswordRequired" class="dsi dsi-danger-circle position-absolute text-danger error-icon"
@@ -29,7 +29,7 @@
         (click)="showPassword['new']= !showPassword['new']"></span>
     </div>
     <div class="input-wrapper position-relative">
-      <input [type]="showPassword['confirm'] ? 'text' : 'password'" placeholder="Re-enter new password"
+      <input [type]="showPassword['confirm'] ? 'text' : 'password'" placeholder="Re-enter Password"
         class="form-control input-eye" [ngClass]="{'is-invalid':cnfrmPasswordRequired || matchPwd}"
         formControlName="confirmpassword">
       <span *ngIf="cnfrmPasswordRequired" class="dsi dsi-danger-circle position-absolute text-danger error-icon"
@@ -42,9 +42,9 @@
     </div>
     <p class="text-danger my-2 text-center">{{message}}&nbsp;</p>
     <div class="d-flex align-items-center justify-content-end mt-4">
-      <button type="button" class="btn btn-link text-dark" id="cancelPwdChng"
+      <button type="button" class="btn btn-dark btn-min-width mr-3" id="cancelPwdChng"
         (click)="changePasswordModalRef.close(false)">Cancel</button>
-      <button type="button" class="btn btn-min-width btn-dark" (click)="changePassword()" id="confirmChangePssword"
+      <button type="button" class="btn btn-min-width btn-primary" (click)="changePassword()" id="confirmChangePssword"
         [disabled]="changePasswordForm.invalid || matchPwd">Confirm</button>
     </div>
   </div>
