--- a/src/app/home/faas/faas-listing/faas-listing.component.scss
+++ b/src/app/home/faas/faas-listing/faas-listing.component.scss
@@ -41,8 +41,8 @@
       }
 
       .item-last-invoked {
-        min-width: 160px;
-        max-width: 160px;
+        min-width: 180px;
+        max-width: 180px;
       }
 
       .item-actions {
@@ -50,7 +50,7 @@
         max-width: 200px;
         position: absolute;
         right: -500px;
-        top: 5px;
+        top: 12px;
         transition: 0.2s;
 
         .actions {
@@ -113,5 +113,17 @@
 
   &.show {
     right: 0px !important;
+  }
+}
+
+
+.more-options {
+  z-index: 2;
+  top: 10px;
+  right: 10px;
+  min-width: 140px;
+
+  .list-group-item {
+    height: 36px;
   }
 }
